# yield-control-plane

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENT_TRACKER.md  Cargo.toml  Makefile  README.md  docker-compose.yml  justfile  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
crates/config/: Cargo.toml
crates/domain/: Cargo.toml
crates/domain/src/: abstract_refinement.rs  asset.rs  certification.rs  errors.rs  events.rs  invariants.rs  ledger.rs  lib.rs  money.rs  sweep.rs
crates/domain/tests/: ledger_invariant_tests.rs  liveness_trace_tests.rs  refinement_trace_tests.rs  sweep_property_tests.rs  sweep_state_machine_tests.rs
crates/messaging/: Cargo.toml
crates/messaging/src/: envelope.rs  lib.rs  localstack.rs  sns.rs  sqs.rs
crates/observability/: Cargo.toml
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 20260616150400_initial.sql
crates/persistence/src/: db.rs  errors.rs  idempotency.rs  inbox.rs  lib.rs  models.rs  outbox.rs  repositories.rs
crates/persistence/tests/: repository_tests.rs
docs/: architecture.md  aws-certification.md  bootstrap.md  compliance-readiness.md  formal-verification.md  index.md  liveness-verification.md  local-development.md  operations.md  production-readiness.md  security.md  testing.md  traceability.md
docs/adr/: 0001-use-rust-workspace-and-shared-domain-crates.md  0002-use-localstack-for-local-sns-sqs.md  0003-use-postgres-sqlx-and-append-only-ledger.md  0004-enforce-state-machine-in-domain-layer.md  0005-use-outbox-inbox-for-resilient-messaging.md  0006-use-react-typescript-generated-api-client.md  0007-use-docker-compose-for-primary-local-runtime.md  0008-provide-kind-kubernetes-bootstrap.md  0009-use-mock-transfer-agent-and-chain-observer-locally.md  0010-no-real-aws-calls-in-local-mode.md  0011-production-aws-differs-from-local-simulation.md  0012-enforce-financial-safety-invariants.md  README.md
docs/agentic/: docs-generation.md  gate-history.md  implementation-log.md  index.md  working-agreement.md
docs/architecture/: README.md
docs/certification/: aws-simulation-internal-certification-report-2026-06-17.md
docs/runbooks/: aws-simulation.md  external-audit-readiness.md  failure-injection.md  index.md  kubernetes-kind.md  localstack-sns-sqs.md  postgres-ledger-integrity.md  reconciliation-breaks.md
docs/trackers/: aws-certification-formal-diagnosis.md  aws-certification-simulation-implementation.md  aws-certification-simulation-planning.md  aws-certification-simulation-tracking.md  c4-evidence-pack.md  dfd-evidence-pack.md  formal-liveness-implementation.md  formal-liveness-planning.md  formal-liveness-tracking.md  formal-refinement-implementation.md  formal-refinement-planning.md  formal-refinement-tracking.md  formal-verification-implementation.md  formal-verification-planning.md  formal-verification-tracking.md  sane-formal-ladder-continuation-implementation.md  sane-formal-ladder-continuation-planning.md  sane-formal-ladder-continuation-tracking.md  standards-readiness-implementation.md  standards-readiness-planning.md  standards-readiness-tracking.md  targeted-rust-source-proof-implementation.md  targeted-rust-source-proof-planning.md  targeted-rust-source-proof-tracking.md
infra/aws-simulation/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
scripts/: aws-cert-admission-check.sh  aws-cert-bootstrap-iam.sh  aws-cert-check-fis-targets.sh  aws-cert-collect.sh  aws-cert-deploy.sh  aws-cert-destroy.sh  aws-cert-preflight.sh  aws-cert-run.sh  aws-cert-teardown-iam.sh  aws-cert-wait-ecs-services-stable.sh  aws-cert-wait-queues-drained.sh  bootstrap-local.sh  check-tools.sh  dev-up.sh  generate-formal-coverage-map.py  generate-repo-surface-coverage-map.py  install-kind-tooling.sh  localstack-init.sh  smoke-create-sweep.sh  smoke-failure-paths.sh  smoke-k8s.sh  validate-all.sh  validate-aws-certification.sh  validate-c4.sh  validate-dfd.sh  validate-docs.sh  validate-formal-coverage-map.sh  validate-formal-coverage.sh  validate-k8s.sh  validate-liveness-coverage.sh  validate-refinement.sh  validate-repo-surface-coverage-map.sh  validate-source-proofs.sh  validate-specs.sh  validate-standards-readiness.sh  validate-tla.sh
services/api/: Cargo.toml  Dockerfile
services/api/src/: error.rs  lib.rs  main.rs  openapi.rs
services/api/src/middleware/: mod.rs
services/api/src/routes/: mod.rs
services/api/tests/: api_tests.rs
services/certifier/: Cargo.toml  Dockerfile
services/certifier/src/: main.rs
services/mock-transfer-agent/: Cargo.toml  Dockerfile
services/mock-transfer-agent/src/: main.rs
services/worker/: Cargo.toml  Dockerfile
services/worker/src/: main.rs
services/worker/src/workers/: mod.rs
spec/: asyncapi.yaml  openapi.yaml
spec/certification/: aws_certification_coverage_map.json  aws_certification_load.js  standards_readiness_map.json
spec/diagrams/: architecture.mmd  local-runtime.mmd  sweep-order-state-machine.mmd
spec/domain/: sweep_order.machine.yaml
spec/refinement/: formal_coverage_map.json  invariant_coverage.yaml  liveness_coverage.yaml  repo_surface_coverage_map.json  rust_tla_mapping.yaml
spec/source/: fidelity_defi_yield_platform_spec.md
spec/tla/: YieldCertificationCapacity.cfg  YieldCertificationCapacity.tla  YieldCertificationCapacityProofs.tla  YieldControlPlane.cfg  (+11 more)
(+57 files in other folders)
