[package]
name = "institutional-yield-messaging"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-sns.workspace = true
aws-sdk-sqs.workspace = true
aws-types.workspace = true
institutional-yield-domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
