[package]
name = "institutional-yield-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
http.workspace = true
institutional-yield-config = { path = "../../crates/config" }
institutional-yield-domain = { path = "../../crates/domain" }
institutional-yield-observability = { path = "../../crates/observability" }
institutional-yield-persistence = { path = "../../crates/persistence" }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tower.workspace = true
