[package]
name = "institutional-yield-certifier"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
institutional-yield-persistence = { path = "../../crates/persistence" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true

