[package]
name = "institutional-yield-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
institutional-yield-config = { path = "../../crates/config" }
institutional-yield-domain = { path = "../../crates/domain" }
institutional-yield-messaging = { path = "../../crates/messaging" }
institutional-yield-observability = { path = "../../crates/observability" }
institutional-yield-persistence = { path = "../../crates/persistence" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
